# invtrack

./: README.md  invtrack.code-workspace
.github/workflows/: docker-ecr-deploy.yml  docker-image.yml
api/: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
api/migrations/2025-02-09-104626_init/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/models/: category.rs  item.rs  item_model.rs  mod.rs
api/src/routes/: categories.rs  item.rs  items.rs  mod.rs
api/src/tables/: item_table.rs  mod.rs
client/: build.gradle.kts  settings.gradle.kts
client/composeApp/: build.gradle.kts
client/composeApp/src/androidMain/kotlin/dev/dhzdhd/invtrack/: MainActivity.kt  Platform.android.kt
client/composeApp/src/androidMain/res/values/: strings.xml
client/composeApp/src/commonMain/composeResources/drawable/: back-arrow.xml  settings.xml
client/composeApp/src/wasmJsMain/resources/: index.html
client/gradle/: libs.versions.toml
client/iosApp/Configuration/: Config.xcconfig
client/iosApp/iosApp.xcodeproj/: project.pbxproj
frontend/: Cargo.toml  package-lock.json  tailwind.config.js
frontend-gleam/: .gitignore  gleam.toml  index.html  main.js  manifest.toml  package-lock.json  package.json  vite.config.js
frontend-gleam/.github/workflows/: test.yml
frontend-gleam/src/: frontend.gleam
frontend-gleam/src-tauri/: tauri.conf.json
frontend-ps/: packages.dhall
frontend-svelte/: package-lock.json  package.json
frontend-svelte/src-tauri/: Cargo.toml  tauri.conf.json
frontend-svelte/src-tauri/src/: main.rs
frontend/desktop/src/: main.rs
frontend/mobile/src/: main.rs
frontend/ui/assets/: output.css
frontend/ui/src/: layout.rs  lib.rs  router.rs
frontend/ui/src/components/: header.rs  mod.rs  navbar.rs
frontend/ui/src/routes/: blog.rs  home.rs
frontend/web/src/: main.rs
vlm/: hello.py  pyproject.toml
(+19 files in other folders)
