[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.7", features = ["postgres"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lambda_http = { version = "0.14.0", features = ["anyhow"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros"] }
