[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.7", features = ["chrono", "postgres", "serde_json", "time", "uuid"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
lambda_http = { version = "0.14.0", features = ["anyhow"] }
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros"] }
uuid = { version = "1.13.1", features = ["serde"] }
